--- a/site.master
+++ b/site.master
@@ -14,11 +14,23 @@
     <link href="posts.css" rel="stylesheet" type="text/css" />
     <link href="comments.css" rel="stylesheet" type="text/css" />
     <link href="widgets.css" rel="stylesheet" type="text/css" />
-    <meta name="description" content="Un blog para ayudarte a sacar el m&aacuute;ximo partido a las posibilidades de Excel. Un blog para que tengas la oportunidad de conocer mi trabajo y mejorar en el tuyo." />
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="description" content="Un blog para ayudarte a sacar el m&aacute;ximo partido a las posibilidades de Excel. Un blog para que tengas la oportunidad de conocer mi trabajo y mejorar en el tuyo." />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <asp:ContentPlaceHolder id="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-51663728-1', 'ludiverso.com');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <div id="container" >
